[package]
name = "tt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
backtrace = "0.3.66"
byteorder = "1.4.3"
bytes = "1.3.0"
fork = "0.1.20"
fs4 = "0.6.2"
interprocess = "1.2.1"
lazy_static = "1.4.0"
log = "0.4.17"
nix = "0.25.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
signal-hook = "0.3.14"
simplelog = "0.12.0"
sysinfo = "0.26.8"
termion = "2.0.1"

[[bin]]
name = "tt-client"
path = "src/client/main.rs"

[[bin]]
name = "tt-server"
path = "src/server/main.rs"

[lib]
name = "tt"
path = "src/lib.rs"
